--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SMS to DingTalk</string>
-    <string name="noticed_button_name">Set Noticed Token</string>
-    <string name="not_noticed_button_name">Set Not Noticed Token</string>
+    <string name="set_token_button_name">Set Token</string>
     <string name="token_input_hint">Enter DingTalk Robot Token</string>
-    <string name="noticed_token_hint">Noticed Token is:</string>
-    <string name="not_noticed_token_hint">Not Noticed Token is:</string>
-    <string name="default_token">[Empty]</string>
 </resources>
